# Project1

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  LeftParenAutomata.cpp  LeftParenAutomata.h  Lexer.cpp  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Q_MARK.cpp  Q_MARK.h  QueriesAutomaton.h  RightParenAutomata.cpp  RightParenAutomata.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  lab1  main.cpp
lab1.dSYM/Contents/Resources/DWARF/: lab1
